--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,9 @@ object{width:100%; height:900px; margin:-70px 0px}
 
 
 .brand{ padding: 0px 30px}
-.brand img{width:150px}
+.brand img{width:350px}
+.homebg{background-image: ""}
+.navbar{background-color:#fff }
 .navbar-default .navbar-nav > li > a >img{width:52px; height:21px; padding: 0px; margin: 0px}
 .navbar-header{margin-top:6px} 
 
@@ -22,7 +24,7 @@ object{width:100%; height:900px; margin:-70px 0px}
 
 .jumbotron { background-color:#fff; background-size: auto 100%; max-width: 100%; margin-top:27px; padding:20px; background-position: top; }
 .jumbotron h1{padding-top: 48px; font-weight: bold}
-.jumbotron .display, .lead, .caption h3 {color:#fff; text-shadow: 0 2px 2px rgba(0,0,0,.6)}
+.jumbotron .display, .lead, .caption h3 {color:#337ab7;}
 .jumbotron img{max-width: 100%}
 .jumbotron .container{margin-top: 5% }
 .jumbotron iframe{width:100%; height:500px; margin:-140px 0px -90px 0px;  overflow: hidden; border: none; }
