--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ object{width:100%; height:900px; margin:-70px 0px}
 
 
 .brand{ padding: 0px 30px}
-.brand img{width:350px}
+.brand img{width:40%}
 .homebg{background-image: ""}
 .navbar{background-color:#fff }
 .navbar-default .navbar-nav > li > a >img{width:52px; height:21px; padding: 0px; margin: 0px}
